small spacing fixes

--- a/styles/HomepageServices.module.css
+++ b/styles/HomepageServices.module.css
@@ -1,7 +1,7 @@
 .container {
   width: 100%;
   height: fit-content;
-  padding: 16px 20px 24px 20px;
+  padding: 16px 20px 36px 20px;
   background-color: var(--background);
   display: flex;
   flex-direction: column;
@@ -38,15 +38,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 16px;
-  padding: 32px 0px 32px 0px;
+  gap: 0px;
+  padding: 16px 0px 0px 0px;
 }
 
 .serviceWrapper {
   display: flex;
   flex-direction: row;
   gap: 10px;
-  padding: 24px 0px;
+  padding: 28px 0px 28px;
   width: 100%;
 }
 .displayTitle {
