--- a/styles/Portfolio.module.css
+++ b/styles/Portfolio.module.css
@@ -16,8 +16,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding-bottom: 64px;
-  border-bottom: 2px solid var(--primary);
 }
 .titleWrapper {
   width: 100%;
@@ -49,7 +47,7 @@
 @media screen and (min-width: 550px) {
   .container {
     width: 100%;
-    padding: 16px 40px 0px 40px;
+    padding: 16px 24px 0px 24px;
     background-color: var(--background);
     display: flex;
     flex-direction: column;
